apps/libtest-1/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libtest-1
  namespace: dev
  labels:
    app: libtest-1
    backstage.io/kubernetes-id: libtest-1
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: libtest-1
  template:
    metadata:
      labels:
        app: libtest-1
        backstage.io/kubernetes-id: libtest-1
        environment: dev
    spec:
      containers:
        - name: libtest-1
          image: jaykumark7/libtest-1:1.0.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
