apps/libtest-1/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libtest-1
  namespace: dev
  labels:
    backstage.io/kubernetes-id: libtest-1
spec:
  selector:
    app: libtest-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
